<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.extremeplayer.interrupt.homeactivities.AboutActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:duration="2000"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="25dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:src="@drawable/ic_account_circle_black_24dp" />

                <TextView
                    android:id="@+id/int_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/logo"
                    android:layout_marginTop="20dp"
                    android:text="INTERRUPT '17"
                    android:textAlignment="center"
                    android:textSize="30dp" />

                <TextView
                    android:id="@+id/int_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/int_title"
                    android:layout_marginTop="10dp"
                    android:text="October 1. Save The Date."
                    android:textAlignment="center"
                    android:textSize="20dp" />

            </RelativeLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/def_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="What is Interrupt?"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shimmer" />

        <HorizontalScrollView
            android:id="@+id/cards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_title">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/webster_card"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#123F56"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/webster_title"
                            android:textColor="#ffffff"
                            android:textSize="40dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center"
                            android:text="@string/webster_def_1"
                            android:textColor="#ffffff"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center"
                            android:text="@string/webster_def_2"
                            android:textColor="#ffffff"
                            android:textSize="15dp" />

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_merriam_webster_logo" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/cs_card"
                    android:layout_width="300dp"
                    android:layout_height="200dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    app:cardBackgroundColor="#123F56"
                    app:cardCornerRadius="12dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/webster_title"
                            android:textColor="#ffffff"
                            android:textSize="40dp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:fontFamily="sans-serif-condensed"
                            android:gravity="center"
                            android:paddingEnd="16dp"
                            android:paddingStart="16dp"
                            android:text="@string/cs_def"
                            android:textAlignment="center"
                            android:textColor="#ffffff"
                            android:textSize="15dp" />

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="40dp"
                            android:layout_gravity="end"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:src="@drawable/ic_intel_logo"
                            android:tint="#fff" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/def_title_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/what_is"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cards" />

        <android.support.v7.widget.CardView
            android:id="@+id/svce_card"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#123F56"
            app:cardCornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/def_title_real">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="serif"
                    android:gravity="center"
                    android:text="@string/webster_title"
                    android:textColor="#ffffff"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="@string/svce_def"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:src="@drawable/ic_account_circle_black_24dp"
                    android:tint="#fff" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/int_about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="@string/interrupt_desc"
            android:textAlignment="center"
            android:textSize="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/svce_card" />

        <android.support.v7.widget.CardView
            android:id="@+id/int_time"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#123F56"
            app:cardCornerRadius="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/int_about">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="Venue : SVCE, Sri Perumbudur"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingEnd="20dp"
                    android:paddingStart="20dp"
                    android:text="Time : 9AM - 230PM"
                    android:textColor="#ffffff"
                    android:textSize="15dp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/dev_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:text="The Developers"
            android:textSize="30dp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/int_time" />

        <LinearLayout
            android:id="@+id/dev_icons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_title">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dev1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle_black_24dp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dev2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/abi" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/dev3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:src="@drawable/ic_account_circle_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dev_names"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_icons">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Adarsh M"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Abishaik M"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Jashaul D"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dev_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dev_names">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Developer and Designer"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Developer"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Designer"
                android:textAlignment="center" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
